cli/src/tests/error/values.sibs
(one1,,)
("one2";"two")
("one3",two,,)
("one4"; "two", "three")
(one5,,)
(one6; two; )
(one7; two; three; )